--- a/web.css
+++ b/web.css
@@ -43,7 +43,21 @@ h1{
     
     opacity: 0.8;
 }
-
+#start-button:hover{
+    color: white;
+}
+.btn:hover{
+    opacity: 0.9;
+}
+#start-button{
+    text-align: center;
+    align-items: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 3rem;
+    border-radius: 25px;
+    background-color: #FF006E;
+    border: none !important;
+}
 @media (max-width: 460px) {
     .h1{
         font-size: 15px;
