added rules button

--- a/web.css
+++ b/web.css
@@ -23,20 +23,44 @@ h1{
     border-radius: 25px;
 }
 
-#start-button:hover{
+.top-button:hover{
     color: white;
 }
 .btn:hover{
     opacity: 0.9;
 }
-#start-button{
+.top-button{
+    margin : 0 50px;
+
     text-align: center;
     align-items: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 3rem;
+    font-family: 'Press Start 2P', cursive;
+    font-size: 2rem;
     border-radius: 25px;
     background-color: #FF006E;
-    border: none !important;
+    border: none ;
+}
+#Rules{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-left: 100px;
+    background-color: #000000;
+    border: solid 2px;
+    border-color: #FF006E;
+    color: #FF006E;
+    width: 40px;
+
+}
+
+#msg{
+    display: none;
+    color: white ;
+}
+
+#Rules:hover{
+    
+    color: #ffffff;
+    border-color: #ffffff;
+    
 }
 #one{
     background-color: #8338EC;
