--- a/web.css
+++ b/web.css
@@ -34,7 +34,7 @@ h1{
 
     text-align: center;
     align-items: center;
-    font-family: 'Press Start 2P', cursive;
+    font-family: 'Press Start 2P', Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 2rem;
     border-radius: 25px;
     background-color: #FF006E;
@@ -42,7 +42,7 @@ h1{
 }
 #Rules{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    margin-left: 100px;
+
     background-color: #000000;
     border: solid 2px;
     border-color: #FF006E;
@@ -92,4 +92,6 @@ h1{
         height: 50px;
         width: 50px;
     }
+    
+
 }
